--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,6 +6,44 @@
     <link rel="stylesheet" href="layui/css/layui.css" />
 </head>
 <body>
+<form class="layui-form" action="">
+    <div class="layui-form-item">
+        <label class="layui-form-label">用户名</label>
+        <div class="layui-input-block">
+            <input id="user_name" type="text" name="title" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">密码</label>
+        <div class="layui-input-block">
+            <input id="password" type="text" name="title" required  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">确认密码</label>
+        <div class="layui-input-block">
+            <input id="check_password" type="text" name="title" required  lay-verify="required" placeholder="请输入确认密码" autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">用户类型</label>
+        <div class="layui-input-block">
+            <input type="radio" name="user-type" value="0" title="用户" checked>
+            <input type="radio" name="user-type" value="1" title="商家">
+            <input type="radio" name="user-type" value="2" title="管理员">
+        </div>
+    </div>
 
+    <div class="layui-form-item">
+        <label class="layui-form-label"></label>
+        <div class="layui-input-block">
+            <div id="btn_register" class="layui-btn layui-btn-lg layui-btn-normal">注册</div>
+        </div>
+    </div>
+</form>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script type="text/javascript" src="layui/layui.all.js"></script>
+<script type="text/javascript" src="js/register.js"></script>
 </body>
 </html>
