--- a/src/main/resources/templates/commodity-details.html
+++ b/src/main/resources/templates/commodity-details.html
@@ -10,7 +10,7 @@
 <body>
 <div class="header"></div>
 
-<div style="text-align: left;">
+<div class="mbody" style="text-align: left;">
     <div class="img-left">
         <img id="img_commodity" width="420px" height="280px"/>
     </div>
@@ -32,12 +32,13 @@
 </div>
 
 
-<div class="footer bottom"></div>
+<div class="footer" style="position:fixed;bottom:0;left:0;width:100%;"></div>
 
 <script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="layui/layui.all.js"></script>
 <script type="text/javascript" src="js/commodity-details.js"></script>
-<script type="text/javascript" src="js/common.js"></script>
+<!--<script type="text/javascript" src="js/common-position.js"></script>-->
 
 </body>
 </html>
