--- a/src/main/resources/templates/common-header.html
+++ b/src/main/resources/templates/common-header.html
@@ -37,7 +37,7 @@
                 <li><a href="/mlxc/">美丽乡村</a></li>
                 <li><a href="/zmcg/">名人名仕</a></li>
                 <li><a href="/xcy/">活动参加</a></li>
-                <li><a href="/ttc/">土特产购买</a></li>
+                <li><a href="/buy-bussiness">土特产购买</a></li>
             </ul>
         </div>
     </div>
