--- a/src/main/resources/templates/commodity-admin.html
+++ b/src/main/resources/templates/commodity-admin.html
@@ -11,16 +11,16 @@
 
 <div class="header"></div>
 
-<div class="mbody">
-    <div class="commodity-item">
-        <div class="div-img">
-            <img class="commodity-img" width="100" height="64" src="images/test.jpg" />
-        </div>
-        <div class="commodity-name">梭子蟹</div>
-        <div class="commodity-price"><span>￥</span><span>123</span></div>
-        <div class="btn-admin"><a class="btn-delete" href="javascript:;">删除</a></div>
-        <div class="clr"></div>
-    </div>
+<div class="mbody" id="commodity_content">
+    <!--<div class="commodity-item">-->
+        <!--<div class="div-img">-->
+            <!--<img class="commodity-img" width="100" height="64" src="images/test.jpg" />-->
+        <!--</div>-->
+        <!--<div class="commodity-name">梭子蟹</div>-->
+        <!--<div class="commodity-price"><span>￥</span><span>123</span></div>-->
+        <!--<div class="btn-admin"><a class="btn-delete" href="javascript:;">删除</a></div>-->
+        <!--<div class="clr"></div>-->
+    <!--</div>-->
 </div>
 
 <div class="footer bottom"></div>
