--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="//uploads.dahe.cn/lxx/mlxc/css/pintuer.css">
     <link rel="stylesheet" href="//uploads.dahe.cn/lxx/mlxc/css/css.css">
     <link rel="stylesheet" href="//uploads.dahe.cn/lxx/mlxc/css/zm-cg.css">
+    <link rel="stylesheet" href="css/common.css" />
     <script src="//uploads.dahe.cn/lxx/mlxc/css/jquery.js"></script>
     <script src="//uploads.dahe.cn/lxx/mlxc/css/layui.js"></script>
     <script src="//uploads.dahe.cn/lxx/mlxc/css/jquery.SuperSlide.2.1.1.js"></script>
@@ -48,39 +49,8 @@
     </style>
 </head>
 <body>
-<div class="banner">
-    <div class="container">
-        <div class="line">
-            <div class="x6">
-                <!--<div class="logo"><a href="//mlxc.dahe.cn/"><img class="img-responsive" src="//uploads.dahe.cn/lxx/mlxc/img/logo.png"/></a></div>-->
-            </div>
-            <div class="x6">
-                <div class="search">
-                    <form method="post">
-                        <div class="input-inline clearfix">
-                            <input type="text" class="input" id="keyword" name="keyword" size="20" placeholder="请输入关键字" />
-                            <input class="button" type="submit" value="搜索" />
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="layout">
-    <div class="menu">
-        <div class="container">
-            <ul id="meuu" class="list-inline">
-                <li><a href="/xwzx/">新闻资讯</a></li>
-                <li><a href="/mlxc/">美丽乡村</a></li>
-                <li><a href="/zmcg/">名人名仕</a></li>
-                <li><a href="/xcy/">活动参加</a></li>
-                <li><a href="/ttc/">土特产购买</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
+<div class="header"></div>
 <br />
 <div class="container">
     <img class="img-responsive" src="images/zsmlxc.png" width="100%" height="200px"/>
@@ -1088,7 +1058,9 @@
     </div>
 </div>
 <br />
-<script type="text/javascript" src="//uploads.dahe.cn/nxy/dahe2017/js/footer.js"></script>
+<script type="text/javascript" src="jquery.js"></script>
+<!--<script type="text/javascript" src="//uploads.dahe.cn/nxy/dahe2017/js/footer.js"></script>-->
+<script type="text/javascript" src="js/common.js"></script>
 
 <script>
     layui.config({
