--- a/src/main/resources/templates/personal-center.html
+++ b/src/main/resources/templates/personal-center.html
@@ -5,6 +5,7 @@
     <title>个人中心</title>
     <link rel="stylesheet" href="layui/css/layui.css" />
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/buy-bussiness.css" />
     <link rel="stylesheet" href="css/personal-center.css" />
     <link rel="stylesheet" href="css/attend-activity.css" />
 
@@ -12,6 +13,9 @@
         .layui-form-label {
             padding-left: 0px;
             padding-right: 0px;
+        }
+        .showif_bussiness {
+            display: none;
         }
     </style>
 </head>
@@ -26,6 +30,8 @@
             <li class="layui-this">个人信息</li>
             <li>修改密码</li>
             <li>我的活动</li>
+            <li class="showif_bussiness">添加商品</li>
+            <li class="showif_bussiness">商品订单</li>
             <li id="shop_cart">购物车</li>
             <li id="attend_activity">参加活动</li>
         </ul>
@@ -89,7 +95,57 @@
 
                 </div>
             </div>
-            <!--<div class="layui-tab-item">内容4</div>-->
+            <div class="layui-tab-item">
+                <div class="mbody">
+                    <form class="layui-form" method="post" action="/add-commodity" enctype="multipart/form-data">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">商品名称</label>
+                            <div class="layui-input-block">
+                                <input type="text" name="bussinessname" required  lay-verify="required" placeholder="请输入商品名称" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">图片</label>
+                            <div class="layui-input-block">
+                                <input type="file" name="image" lay-verify="required" placeholder="请输入商品名称" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">商品价格</label>
+                            <div class="layui-input-block">
+                                <input type="text" name="bussinessprice" required  lay-verify="required" placeholder="请输入商品名称" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">商品总量</label>
+                            <div class="layui-input-block">
+                                <input type="text" name="bussinesscount" required  lay-verify="required" placeholder="请输入商品名称" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item layui-form-text">
+                            <label class="layui-form-label">描述信息</label>
+                            <div class="layui-input-block">
+                                <textarea name="des" placeholder="请输入内容" class="layui-textarea"></textarea>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <div class="layui-input-block">
+                                <input type="submit" class="layui-btn" value="立即提交" />
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="layui-tab-item">
+                <div class="mbody" style="text-align: left;width: 80%;" id="item_content">
+
+                </div>
+            </div>
+            <!--<div class="layui-tab-item">内容5</div>-->
+            <!--<div class="layui-tab-item">内容5</div>-->
+            <!--<div class="layui-tab-item">内容5</div>-->
+            <!--<div class="layui-tab-item">内容5</div>-->
+            <!--<div class="layui-tab-item">内容5</div>-->
             <!--<div class="layui-tab-item">内容5</div>-->
         </div>
     </div>
@@ -101,6 +157,7 @@
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="layui/layui.all.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
+<script type="text/javascript" src="js/buy-bussiness.js"></script>
 <script type="text/javascript" src="js/personal-center.js"></script>
 <script type="text/javascript" src="js/my-activity.js"></script>
 
