--- a/src/main/resources/templates/commodity-details.html
+++ b/src/main/resources/templates/commodity-details.html
@@ -29,10 +29,34 @@
             <div class="layui-btn layui-btn-normal" id="buy">立即购买</div>
         </div>
     </div>
+
+    <div class="clr" style="height: 200px;"></div>
+
+
+    <div class="layui-card">
+        <div class="layui-card-header">用户评论</div>
+        <div class="layui-card-body">
+            <div class="comment-content" id="comment_content">
+                <!--<div class="comment-item">-->
+                    <!--<div class="comment-user-name">我很帅</div>-->
+                    <!--<div class="div-content">-->
+                        <!--<div class="content-text">这真是一个好东西</div>-->
+                        <!--<div class="content-img">-->
+                            <!--<img src="123" />-->
+                        <!--</div>-->
+                        <!--<div class="content-time">2015-12-31</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            </div>
+        </div>
+    </div>
+
+
+    <div style="height: 36px;"></div>
 </div>
 
 
-<div class="footer" style="position:fixed;bottom:0;left:0;width:100%;"></div>
+<div class="footer bottom"></div>
 
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
