--- a/src/main/resources/templates/personal-center.html
+++ b/src/main/resources/templates/personal-center.html
@@ -19,7 +19,7 @@
             display: none;
         }
         .btn-receipt {
-
+            cursor: pointer;
         }
     </style>
 </head>
@@ -35,8 +35,8 @@
             <li>修改密码</li>
             <li id="buy_records">我的订单</li>
             <li>我的活动</li>
-            <li class="showif_bussiness">添加商品</li>
-            <li class="showif_bussiness">商品订单</li>
+            <li class="showif_bussiness" style="display: none;">添加商品</li>
+            <li id="bussiness_order" class="showif_bussiness" style="display: none;">商品订单</li>
             <li id="shop_cart">购物车</li>
             <li id="attend_activity">参加活动</li>
         </ul>
