--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,25 +4,33 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>美丽乡村</title>
-    <meta name="Keywords" content="美丽乡村网" />
-    <meta name="description" content="美丽乡村网" />
-    <meta name="renderer" content="webkit"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <link rel="Shortcut Icon" href="//uploads.dahe.cn/nxy/dahe2017/favicon.ico ">
-    <link rel="stylesheet" href="//uploads.dahe.cn/lxx/mlxc/css/pintuer.css">
-    <link rel="stylesheet" href="//uploads.dahe.cn/lxx/mlxc/css/css.css">
-    <link rel="stylesheet" href="//uploads.dahe.cn/lxx/mlxc/css/zm-cg.css">
+    <!--<meta name="Keywords" content="美丽乡村网" />-->
+    <!--<meta name="description" content="美丽乡村网" />-->
+    <!--<meta name="renderer" content="webkit"/>-->
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>-->
+    <!--<meta http-equiv="Cache-Control" content="no-siteapp"/>-->
+    <!--<link rel="Shortcut Icon" href="//uploads.dahe.cn/nxy/dahe2017/favicon.ico ">-->
+    <!--<link rel="stylesheet" href="//uploads.dahe.cn/lxx/mlxc/css/pintuer.css">-->
+    <!--<link rel="stylesheet" href="//uploads.dahe.cn/lxx/mlxc/css/css.css">-->
+    <!--<link rel="stylesheet" href="//uploads.dahe.cn/lxx/mlxc/css/zm-cg.css">-->
     <link rel="stylesheet" href="css/common.css" />
-    <script src="//uploads.dahe.cn/lxx/mlxc/css/jquery.js"></script>
-    <script src="//uploads.dahe.cn/lxx/mlxc/css/layui.js"></script>
-    <script src="//uploads.dahe.cn/lxx/mlxc/css/jquery.SuperSlide.2.1.1.js"></script>
-    <script src="//uploads.dahe.cn/lxx/mlxc/css/pintuer.js"></script>
-    <!--[if lt IE 9]>
-    <script src="//uploads.dahe.cn/lxx/mlxc/css/respond.min.js"></script>
-    <script src="//uploads.dahe.cn/lxx/mlxc/css/html5shiv.min.js"></script>
-    <![endif]-->
-    <base target="_blank">
+
+    <link rel="stylesheet" href="css/themes/default/default.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/themes/light/light.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/themes/dark/dark.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/themes/bar/bar.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
+
+    <!--<script src="//uploads.dahe.cn/lxx/mlxc/css/jquery.js"></script>-->
+    <!--<script src="//uploads.dahe.cn/lxx/mlxc/css/layui.js"></script>-->
+    <!--<script src="//uploads.dahe.cn/lxx/mlxc/css/jquery.SuperSlide.2.1.1.js"></script>-->
+    <!--<script src="//uploads.dahe.cn/lxx/mlxc/css/pintuer.js"></script>-->
+    <!--[if lt IE 9]><!---->
+    <!--<script src="//uploads.dahe.cn/lxx/mlxc/css/respond.min.js"></script>-->
+    <!--<script src="//uploads.dahe.cn/lxx/mlxc/css/html5shiv.min.js"></script>-->
+    <!--<![endif]&ndash;&gt;-->
+    <!--<base target="_blank">-->
     <style>
         .zm-list .zm-list-box{margin-left:10px !important;}
         .picMarquee-left .hd .prev, .picMarquee-left .hd .next{background:url(//uploads.dahe.cn/lxx/mlxc/images/arrow.png) no-repeat;}
@@ -46,24 +54,37 @@
         .ft-3 ul li a{color: #4e4d4d;}
         .ft-3 ul li:first-child a{font-size: 18px;color: #000000;margin-bottom: 28px;font-weight: 600;}
         .ft-3 img{margin-top: 10px;}
+
     </style>
 </head>
 <body>
 
 <div class="header"></div>
-<br />
-<div class="container">
-    <img class="img-responsive" src="images/zsmlxc.png" width="100%" height="200px"/>
-</div>
-<br />
-<div class="container">
-    <div class="line-middle">
-        <div class="x6"><a href="http://zt.dahe.cn/2017/1957/108440675/" target="_blank"><img class="img-responsive" src="http://mlxc.dahe.cn/uploads/public/img/ad2.jpg" width="498" height="88"/></a></div>
-        <div class="x6"><a href="http://zt.dahe.cn/2017/1957/108457874/index.html" target="_blank"><img class="img-responsive" src="http://mlxc.dahe.cn/uploads/public/img/ad-1.jpg" width="498" height="88"/></a></div>
+
+<div class="slider-wrapper theme-default" style="margin-top: -12px;">
+    <div id="slider" class="nivoSlider" style="height: 320px;">
+        <img src="images/toystory.jpg" data-thumb="images/toystory.jpg" alt="" height="320px" />
+        <img src="images/up.jpg" data-thumb="images/up.jpg" alt="" height="320px"/>
+        <img src="images/walle.jpg" data-thumb="images/walle.jpg" alt="" data-transition="slideInLeft" height="320px" />
+        <img src="images/nemo.jpg" data-thumb="images/nemo.jpg" alt="" height="320px" />
+    </div>
+    <div id="htmlcaption" class="nivo-html-caption">
+        <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
     </div>
 </div>
+
+<!--<div class="container">-->
+    <!--<img class="img-responsive" src="images/zsmlxc.png" width="100%" height="200px"/>-->
+<!--</div>-->
 <br />
-<div class="container">
+<!--<div class="container">-->
+    <!--<div class="line-middle">-->
+        <!--<div class="x6"><a href="http://zt.dahe.cn/2017/1957/108440675/" target="_blank"><img class="img-responsive" src="http://mlxc.dahe.cn/uploads/public/img/ad2.jpg" width="498" height="88"/></a></div>-->
+        <!--<div class="x6"><a href="http://zt.dahe.cn/2017/1957/108457874/index.html" target="_blank"><img class="img-responsive" src="http://mlxc.dahe.cn/uploads/public/img/ad-1.jpg" width="498" height="88"/></a></div>-->
+    <!--</div>-->
+<!--</div>-->
+<!--<br />-->
+<div class="container" style="margin-top: -64px;">
     <div class="s1">
         <div class="line">
             <div class="x6">
@@ -1059,14 +1080,17 @@
 </div>
 <br />
 <script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="js/jquery.nivo.slider.js"></script>
 <!--<script type="text/javascript" src="//uploads.dahe.cn/nxy/dahe2017/js/footer.js"></script>-->
 <script type="text/javascript" src="js/common.js"></script>
 
 <script>
-    layui.config({
-        base: '//uploads.dahe.cn/lxx/mlxc/css/'
-    }).use('site');
-    $(".picMarquee-left").slide({mainCell:".bd ul",autoPlay:true,effect:"leftMarquee",vis:6,interTime:50});
+    // layui.config({
+    //     base: '//uploads.dahe.cn/lxx/mlxc/css/'
+    // }).use('site');
+    // $(".picMarquee-left").slide({mainCell:".bd ul",autoPlay:true,effect:"leftMarquee",vis:6,interTime:50});
+    $('#slider').nivoSlider();
+    $('.nivo-controlNav').css('padding', '0px')
 </script>
 </body>
 </html>
