--- a/src/main/resources/templates/commodity-details.html
+++ b/src/main/resources/templates/commodity-details.html
@@ -26,7 +26,7 @@
 
         <div class="admin-buttons">
             <div class="layui-btn layui-btn-danger" id="btn_add_cart">加入购物车</div>
-            <div class="layui-btn layui-btn-normal" id="buy">立即购买</div>
+            <div class="layui-btn layui-btn-normal" id="btn_buy">立即购买</div>
         </div>
     </div>
 
