图片路径修改

--- a/src/main/resources/templates/common-header.html
+++ b/src/main/resources/templates/common-header.html
@@ -41,10 +41,10 @@
     <div class="menu">
         <div class="container">
             <ul id="meuu" class="list-inline">
-                <li><a href="/xwzx/">新闻资讯</a></li>
+                <li><a href="/">新闻资讯</a></li>
                 <li><a href="/mlxc/">美丽乡村</a></li>
                 <li><a href="/zmcg/">名人名仕</a></li>
-                <li><a href="/xcy/">活动参加</a></li>
+                <li><a href="/attend-activity">活动参加</a></li>
                 <li><a href="/buy-bussiness">土特产购买</a></li>
             </ul>
         </div>
