--- a/src/main/resources/templates/personal-center.html
+++ b/src/main/resources/templates/personal-center.html
@@ -41,6 +41,7 @@
             <li id="bussiness_order" class="showif_bussiness" style="display: none;">商品订单</li>
             <li id="shop_cart">购物车</li>
             <li id="attend_activity" class="showif_bussiness showif_user" style="display: none;">参加活动</li>
+            <li id="add_activity" onclick="window.location.href='add-activity'" class="showif_admin" style="display: none;">添加活动</li>
         </ul>
         <div class="layui-tab-content">
             <div class="layui-tab-item layui-show">
