--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,19 +23,19 @@
         <div class="layui-form-item">
             <label class="layui-form-label">用户名</label>
             <div class="layui-input-block">
-                <input id="user_name" type="text" name="title" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                <input id="user_name" type="text" name="title" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input" maxlength="16">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">密码</label>
             <div class="layui-input-block">
-                <input id="password" type="password" name="title" required  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                <input id="password" type="password" name="title" required  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" maxlength="24">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">确认密码</label>
             <div class="layui-input-block">
-                <input id="check_password" type="password" name="title" required  lay-verify="required" placeholder="请输入确认密码" autocomplete="off" class="layui-input">
+                <input id="check_password" type="password" name="title" required  lay-verify="required" placeholder="请输入确认密码" autocomplete="off" class="layui-input" maxlength="24">
             </div>
         </div>
         <div class="layui-form-item">
