--- a/src/main/resources/static/css/personal-center.css
+++ b/src/main/resources/static/css/personal-center.css
@@ -15,3 +15,12 @@
 .btn-admin-delete-commodity {
     cursor: pointer;
 }
+
+.bussiness-title {
+    margin-left: 12px;
+}
+
+.bussiness-title li {
+    float: left;
+    width: 16%;
+}
